...
        } else {
            viewModel.resetState()
        }
    }

    Scaffold(
        modifier = Modifier.semantics { contentDescription = "AddUpdateScreen" },
        snackbarHost = { SnackbarHost(snackBarHostState) },
        topBar = {
            ExpenseTrackerAppBar(
                title = context.getString(R.string.add_amount_heading),
                navigationIcon = {
                    IconButton(onClick = {
...
                                }
                            }
                        }
                    }
                },
            ) {
                Icon(imageVector = Icons.Rounded.AddTask, contentDescription = "Add Expense")
            }
        },
        floatingActionButtonPosition = FabPosition.End,
    ) { innerPadding ->
        AddUpdateExpenseForm(modifier = modifier.padding(innerPadding), viewModel = viewModel)
    }
...
suspend fun isValidDetails(
    viewModel: AddUpdateExpenseViewModel,
    snackBarHostState: SnackbarHostState,
    coroutineScope: CoroutineScope,
) = coroutineScope.async {
    if (viewModel.addExpenseState.value.expenseData.amount.isEmpty()) {
        snackBarHostState.showSnackbar("Amount can't be empty")
        return@async false
    } else if (viewModel.addExpenseState.value.expenseData.amount.toDouble() <= 0.0) {
        snackBarHostState.showSnackbar("Negative and zero values are not allowed!")
        return@async false
    } else if (viewModel.addExpenseState.value.expenseData.description.isNullOrEmpty()) {
        snackBarHostState.showSnackbar("Description can't be empty")
        return@async false
    }

    return@async true
}.await()

...
    LaunchedEffect(Unit) {
//        focusRequester.requestFocus()
    }

    TextField(
        modifier =
            modifier.testTag("amount_text_field")
                .fillMaxWidth()
                .height(90.dp)
                .padding(horizontal = 16.dp)
                .focusRequester(focusRequester = focusRequester),
        textStyle = TextStyle(fontSize = 40.sp, fontFamily = openSansBoldFontFamily),
        value =
...
